# hs-fresnel

./: .travis.yml  README.rst  fresnel.cabal
bench/: many.hs
src/Data/: Fresnel.hs
src/Data/Fresnel/: Char.hs  TH.hs
test/: doctest.hs
